fix: remove debug logging from hot path + integrate CloudWatch into benchmark
- Remove log.debug() calls from BFS traversal in kotlin-impl, spring-impl,
  nodejs-impl, nodejs-wt-impl (were distorting benchmark measurements)
- Set spring logging.level.org.example=WARN (was DEBUG, active on every request)
- Add CloudWatch capture to benchmark.py using exact benchmark time window
- Make plot_cloudwatch.py importable with start/end datetime params
- Export cloudwatch_results_2026.csv (CPU, memory, 2xx/4xx/5xx, latency, etc.)
- Add create-apprunner-services.sh with per-service health check config
- Add launch-benchmark-ec2.sh (t3.medium, AL2023, us-east-1)
- Update aws.env and plot_cloudwatch.py with new App Runner service IDs

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>