@@ -1,472 +1,260 @@
+# 🏁 The Performance Heptathlon: 7 Stacks, One Algorithm (2026)
 
-# High-Performance Tree Processing Service
-Project Status: Production-Tested & Benchmarked
-
-Target Latency: < 1ms (Algorithm) | Max Throughput: 10k+ requests/min
-
-Key Tech: Java 25, Project Loom, Quarkus, AWS App Runner
-
-## 📖 Table of Contents
-* [🛡️ Defense-in-Depth Security](#-defense-in-depth-security)
-* [🚀 Key Architectural Features](#-key-architectural-features)
-* [🧠 BFS Implementation & Virtual Threads](#-bfs-implementation--virtual-thread-efficiency)
-* [📊 Performance & Case Study](#-performance--cloud-scalability)
-* [🏃 Getting Started & Reproduction](#-getting-started)
-
-### Built with Java 25 & Quarkus
-
-A specialized microservice designed for high-throughput tree structures, utilizing the latest JVM features to ensure
-sub-millisecond processing and cloud-native scalability.
+### A rigorous study of CPU-bound BFS execution across 7 modern backends on AWS App Runner.
 
 ---
 
-## 🛡️ Defense-in-Depth Security
+## 📌 Executive Summary
 
-This service implements a multi-layered security strategy to prevent **Recursive Denial of Service (DoS)** attacks:
+This repository benchmarks a **Breadth-First Search (BFS)** level-order tree traversal implemented identically across 7 backend stacks. The goal is to measure how concurrency models, runtime characteristics, and framework overhead affect **tail latency** under sustained constant-rate load.
 
-1. **Parser Level (Jackson — `JacksonSecurityCustomizer`):** The infrastructure layer limits JSON nesting to 1,000
-   levels via `StreamReadConstraints`, rejecting malicious payloads before a single byte of business logic runs.
-2. **Application Level — Depth (Business Logic):** `TreeService` rejects trees exceeding 500 levels (`tree.max-depth`),
-   enforced via `result.size() >= maxDepth` inside the BFS loop. Configurable at runtime via the `TREE_MAX_DEPTH`
-   environment variable (default: `500`).
-3. **Application Level — Node Count (Business Logic):** `TreeService` rejects trees exceeding 10,000 total nodes
-   (`tree.max-nodes`), preventing wide-tree DoS that a depth check alone cannot catch (a 17-level balanced BST already
-   holds ~130k nodes). Configurable at runtime via the `TREE_MAX_NODES` environment variable (default: `10000`).
-4. **Heap Protection:** By using **Java 25 Records** with `-XX:+UseCompactObjectHeaders`, each node costs ~24 bytes
-   vs ~32 bytes for a standard POJO. At the 10k-node ceiling this keeps per-request allocation under ~500 KB,
-   well within the 512 MB heap and safe under high concurrency.
+The benchmark goes beyond "Hello World" by using a **500-node binary tree (~15 KB JSON)** as the heavy payload — enough CPU work to expose queuing collapse in event-loop runtimes while giving JIT compilers a meaningful hot path to optimize.
 
 ---
 
-## 🚀 Key Architectural Features
+## 🏆 Performance Leaderboard (Scenario B: 500 nodes)
 
-* **Java 25 Virtual Threads (Project Loom):** Annotated with `@RunOnVirtualThread`, the service handles massive
-  concurrency by decoupling JAX-RS requests from expensive OS threads.
-* **Telemetry & Benchmarking:** Every response includes custom headers (`X-Runtime-Ms` and `X-Runtime-Nanoseconds`) for
-  high-precision observability.
-* **Domain-Driven Package Strategy:** Organized by domain logic (trees, arrays, etc.) to facilitate modular microservice
-  extraction.
-* **Global Exception Mapping:** Standardized error responses via a centralized `ExceptionMapper` for consistent API
-  behavior.
+| Implementation | p50 Latency | p99 Latency | Success Rate | BFS Algorithm Time* |
+| :--- | :---: | :---: | :---: | :---: |
+| **☕ Java 25 (Quarkus)** | **5.36 ms** | **165.38 ms** | **100%** | 0.052 ms |
+| **🐹 Go (Fiber)** | **5.45 ms** | **220.80 ms** | **100%** | **0.023 ms** |
+| **🦺 Kotlin (Quarkus)** | 4.66 ms | 358.91 ms | 100% | 0.174 ms |
+| **☕ Java 25 (Spring 4)** | 822 ms | 8,930 ms | ⚠ 91% | 0.581 ms |
+| **🟢 Node.js / 🐍 Python** | **> 26s** | **Collapse** | **Failed** | 35.28 ms (Node) |
 
-### 🏗️ App Runner Infrastructure
-
-```mermaid
-graph LR
-    subgraph Clients [Clients]
-        Mac["💻 External Client\n(~148ms RTT)"]
-        EC2["🖥️ EC2 same-region\n(~4ms RTT)"]
-    end
-
-    subgraph AppRunner [AWS App Runner]
-        direction TB
-
-        subgraph Proxy [Envoy Proxy — TLS termination]
-            Envoy["Envoy\n⬛ Buffers up to N concurrent requests\n⬛ Concurrency threshold controls\n   how many reach the instance\n⬛ Excess requests queued here\n   → source of tail latency"]
-        end
-
-        subgraph Scaling [Auto-Scaling]
-            Scaler["App Runner Scaler\nTriggers when instance concurrency\nexceeds threshold (default: 100)"]
-        end
-
-        subgraph Fleet [Instance Fleet  —  min: 1, max: 25]
-            subgraph I1 [Instance 1  —  always warm]
-                VT1["🧵 Virtual Threads\n@RunOnVirtualThread"]
-                BFS1["⚡ BFS Algorithm\n37 µs · 0 allocations on hot path"]
-            end
-            subgraph I2 [Instance 2  —  cold start ~10s]
-                VT2["🧵 Virtual Threads"]
-                BFS2["⚡ BFS Algorithm"]
-            end
-        end
-
-        CW["📊 CloudWatch\nCPU · Memory · Concurrency\nLatency · 2xx / 4xx / 5xx"]
-    end
-
-    Mac -->|"HTTPS POST ~19KB"| Envoy
-    EC2 -->|"HTTPS POST ~19KB"| Envoy
-    Envoy -->|"≤ threshold concurrent"| I1
-    Envoy -.->|"overflow queued"| I1
-    Envoy -->|"after scale-out"| I2
-    I1 -.->|metrics| CW
-    I2 -.->|metrics| CW
-    CW -.->|"concurrency > threshold\n→ scale-out signal"| Scaler
-    Scaler -.->|provisions| I2
-    VT1 --> BFS1
-    VT2 --> BFS2
-```
-
-> **Key insight from benchmarking:** Envoy's buffering makes the instance appear underloaded to the scaler even under 250 concurrent connections — the instance only saw ~6 concurrent requests from an external client, vs 69.5 from EC2 in the same region.
+*\* BFS time = `X-Runtime-Ms` header from a single warm request (pure algorithm time, excludes HTTP/JSON).*
 
 ---
 
-## 🧠 BFS Implementation & Virtual Thread Efficiency
+## 🛠 The Contenders
 
-<details>
-<summary><b>🔍 View Layer 1 — JacksonSecurityCustomizer (Parser-level DoS Guard)</b></summary>
+| Stack | Language Version | Framework | Concurrency Model |
+| :--- | :---: | :--- | :--- |
+| ☕ **Java 25 (Quarkus)** | Java 25 | Quarkus 3.x + Netty | Virtual Threads (Project Loom) |
+| ☕ **Java 25 (Spring 4)** | Java 25 | Spring Boot 4 + Netty | Virtual Threads (Project Loom) |
+| 🦺 **Kotlin (Quarkus)** | Kotlin + JVM | Quarkus 3.x + Netty | Coroutines |
+| 🐹 **Go (Fiber)** | Go 1.26 | Fiber v2 + fasthttp | Goroutines (M:N scheduler) |
+| 🟢 **Node.js (Event Loop)** | Node.js 22 | Fastify | Single-threaded Event Loop |
+| 🟢 **Node.js (Worker Threads)** | Node.js 22 | Fastify + Worker Pool | CPU offload via Worker Threads |
+| 🐍 **Python (FastAPI)** | Python 3.14 | FastAPI + uvloop + orjson | Async + Pydantic v2 (Rust core) |
 
-```java
-/**
- * Layer 1 — rejects JSON payloads nested beyond 1,000 levels at the parser,
- * before any business logic runs.
- */
-@Singleton
-public class JacksonSecurityCustomizer implements ObjectMapperCustomizer {
-
-    private static final int MAX_JSON_NESTING_DEPTH = 1000;
-
-    @Override
-    public void customize(ObjectMapper mapper) {
-        mapper.getFactory().setStreamReadConstraints(
-            StreamReadConstraints.builder()
-                .maxNestingDepth(MAX_JSON_NESTING_DEPTH)
-                .build()
-        );
-    }
-}
-```
-</details>
-
-<details>
-<summary><b>🔍 View TreeResource & TreeService Implementation (Single-Pass BFS)</b></summary>
-
-```java
-/**
- * Resource: Handles Concurrency & Observability
- */
-@Path("/api/v1/trees")
-public class TreeResource {
-
-    @Inject TreeService treeService;
-
-    @POST
-    @Path("/level-order")
-    @RunOnVirtualThread // Entire request lifecycle offloaded to Virtual Threads
-    public Response getLevelOrder(TreeNode root) {
-        if (root == null) throw new TreeProcessingException("Root node cannot be null");
-
-        long startTime = System.nanoTime();
-        List<List<Integer>> result = treeService.solveLevelOrder(root);
-        long durationNs = System.nanoTime() - startTime;
-
-        return Response.ok(result)
-            .header("X-Runtime-Ms", String.format("%.3f", durationNs / 1_000_000.0))
-            .header("X-Runtime-Nanoseconds", durationNs)
-            .build();
-    }
-}
-
-/**
- * Service: Single-pass BFS with inline depth and node-count guards.
- * Both security checks are integrated into the BFS pass — no separate recursive
- * pre-check — eliminating the double O(N) traversal and the risk of a
- * StackOverflowError inside the validator itself.
- */
-@ApplicationScoped
-public class TreeService {
-
-    @ConfigProperty(name = "tree.max-depth", defaultValue = "500")
-    int maxDepth;   // Security constraint: max tree levels. Env: TREE_MAX_DEPTH
-
-    @ConfigProperty(name = "tree.max-nodes", defaultValue = "10000")
-    int maxNodes;   // Security constraint: max total nodes (prevents wide-tree DoS). Env: TREE_MAX_NODES
-
-    public List<List<Integer>> solveLevelOrder(TreeNode root) {
-        if (root == null) return List.of();
-
-        List<List<Integer>> result = new ArrayList<>();
-        Queue<TreeNode> queue = new ArrayDeque<>();
-        queue.add(root);
-        int totalNodes = 0;
-
-        while (!queue.isEmpty()) {
-            if (result.size() >= maxDepth) {
-                throw new TreeProcessingException("Tree depth exceeds security limits (Max: " + maxDepth + ")");
-            }
-
-            int levelSize = queue.size();
-            totalNodes += levelSize;
-            if (totalNodes > maxNodes) {
-                throw new TreeProcessingException("Tree node count exceeds security limits (Max: " + maxNodes + ")");
-            }
-
-            List<Integer> currentLevel = new ArrayList<>(levelSize);
-
-            for (int i = 0; i < levelSize; i++) {
-                TreeNode node = queue.poll();
-                currentLevel.add(node.value());
-                if (node.left() != null) queue.add(node.left());
-                if (node.right() != null) queue.add(node.right());
-            }
-            result.add(List.copyOf(currentLevel));
-        }
-        return List.copyOf(result);
-    }
-}
-```
-</details>
-The core of this service is a high-performance **Level-Order Traversal (BFS)** algorithm, specifically optimized
-to leverage the breakthrough concurrency features of the modern JVM.
-
-### 1. The Algorithm: Single-Pass Iterative BFS
-The service uses a single-pass iterative BFS that integrates the security depth-check into the traversal loop,
-eliminating the previous two-phase design (separate recursive validator + traversal).
-* **Logic:** Discovery is managed via a `java.util.ArrayDeque`, acting as a FIFO queue to process nodes level-by-level.
-* **Complexity:** Achieves a time complexity of $O(N)$ and space complexity of $O(W)$, where $W$ is the maximum width of the tree.
-* **Stack Safety:** The iterative approach eliminates `StackOverflowError` on deep or unbalanced trees — including inside
-  the depth validator itself, which was a risk with the previous recursive pre-check.
-* **Single-Pass Optimization:** Both the depth check (`result.size() >= MAX_DEPTH`) and the node-count check
-  (`totalNodes > MAX_NODES`) are evaluated per BFS level, removing the prior double $O(N)$ traversal cost and
-  closing the wide-tree DoS gap that depth alone cannot address.
-
-### 2. Concurrency Model: Project Loom (Virtual Threads)
-By utilizing the `@RunOnVirtualThread` annotation, the service decouples HTTP request handling from expensive OS threads.
-* **High-Volume I/O:** When the BFS algorithm finishes and the JSON serialization begins, the virtual thread is unmounted from the CPU "Carrier Thread." This allows the JVM to handle thousands of concurrent requests with a minimal thread pool.
-* **Efficiency Proof:** This architectural choice is the reason **Memory Utilization remained flat at 4.93%** even while processing over **10,000 requests per minute** at 20:51.
-
-### 3. Data Optimization: Java 25 Records
-The tree nodes and response objects are implemented as **Java 25 Records**.
-* **Reduced Header Overhead:** Records have a significantly smaller memory footprint than standard POJOs. This minimizes the "Garbage Collection (GC) Pressure" when traversing 500+ node trees under heavy load.
-* **Immutable State:** Ensures that the BFS queue operations are inherently thread-safe and optimized for JIT (Just-In-Time) compilation.
-
-### 4. Performance Paradox: "The Speed Bottleneck"
-A key discovery during benchmarking was that **Envoy (App Runner's proxy) queues requests before they reach the instance**, acting as a buffer. This means the App Runner auto-scaler observes only the requests that actively reach the instance — not the total concurrent connections. With the default concurrency threshold of 100, the single instance never appeared saturated to the scaler, even under 250 concurrent connections.
-
-**The Lesson:** "Fast code is invisible to slow infrastructure. When Envoy absorbs your burst, the scaler never sees it."
+All services deployed on **AWS App Runner — 1 vCPU / 2 GB RAM** (us-east-1).
 
 ---
 
-## 📊 Observability Example
+## 🔬 Methodology
 
-Performance metrics are exposed directly in the HTTP headers to validate the sub-millisecond execution times:
-```http
-x-runtime-ms: 0.037
-x-runtime-nanoseconds: 37015
-x-envoy-upstream-service-time: 4
-```
-
----
-
-## 🛠 Tech Stack
-
-* **Runtime:** OpenJDK 25
-* **Framework:** Quarkus (RESTEasy Reactive)
-* **Testing:** RestAssured, JUnit 5, and Environment-based `.http` clients. Test suite covers happy paths, edge cases
-  (leaf node, zero-value default, depth boundary), and negative paths (null body, malformed JSON, depth-exceeded).
+* **Load generator:** `wrk2` — constant open-loop rate to eliminate **Coordinated Omission bias**.
+* **Benchmark client:** EC2 `c5.xlarge` in the same region (low network jitter).
+* **Target rate:** 500 req/s with 50 connections / 4 threads.
+* **Warm-up:** 60s brute-force curl (8 workers) + wrk2 progressive ramp: 60s @ 200 req/s → 60s @ 350 req/s → 60s @ 500 req/s.
+* **Measurement:** 90s window after a 10s cooldown.
+* **Payloads:** Small tree: 7 nodes · Large tree: 500 nodes (~15 KB).
+* **Internal timer:** `X-Runtime-Ms` header — measures only BFS execution, excluding HTTP/JSON overhead.
 
 ---
 
-## 🏃 Getting Started
+## 📊 Detailed Results
 
-### Run in Development Mode
+![Percentile Curves](images/benchmark-percentile-curves.png)
 
-```bash
-./gradlew quarkusDev
-```
+### Scenario A — Small Tree (7 nodes) · 500 req/s
 
-### Configuration
+> Base overhead: measures the framework and concurrency model cost on a trivial workload.
 
-Security constraints are externalized via MicroProfile Config and can be overridden at runtime without recompilation:
+| Implementation | p50 (ms) | p90 (ms) | p99 (ms) | p99.9 (ms) | req/s | BFS time* |
+| :--- | :---: | :---: | :---: | :---: | :---: | :---: |
+| 🦺 **Kotlin (Quarkus)** | **2.81** | **4.15** | 112.83 | 350.21 | 500.16 | 0.052 ms |
+| 🐹 **Go (Fiber)** | 3.24 | 4.32 | **40.38** | **202.75** | 500.18 | 0.007 ms |
+| 🐍 **Python (FastAPI)** | 3.57 | 8.41 | 12.32 | **18.50** | 498.79 | 0.010 ms |
+| ☕ **Java 25 (Quarkus)** | 3.85 | 8.23 | 122.37 | 307.45 | 498.77 | 0.005 ms |
+| ☕ **Java 25 (Spring 4)** | 3.99 | 9.82 | 296.19 | 538.62 | 498.75 | 0.062 ms |
+| 🟢 **Node.js (Worker Threads)** | 4.72 | 19.82 | 411.65 | 659.46 | 498.70 | 1.225 ms |
+| 🟢 **Node.js (Event Loop)** | 5.06 | 17.41 | 355.84 | 708.61 | 498.72 | 3.562 ms |
 
-| Property | Environment Variable | Default | Description |
-| :--- | :--- | :--- | :--- |
-| `tree.max-depth` | `TREE_MAX_DEPTH` | `500` | Maximum tree depth (levels) before rejection |
-| `tree.max-nodes` | `TREE_MAX_NODES` | `10000` | Maximum total node count before rejection |
+*\* BFS time = `X-Runtime-Ms` header from a single warm request (pure algorithm time, excludes HTTP/JSON)*
 
-```bash
-# Example: tighten limits for a resource-constrained deployment
-TREE_MAX_DEPTH=200 TREE_MAX_NODES=5000 ./gradlew quarkusDev
-```
+![Small Tree Benchmark](images/benchmark_small_tree__7_nodes.png)
 
 ---
 
-## 📊 Performance & Benchmarks
+### Scenario B — Large Tree (500 nodes, ~15 KB) · 500 req/s
 
-All benchmarks were executed against the live production deployment on **AWS App Runner (us-east-1)** using a **500-node balanced BST** (9 levels, ~19 KB JSON payload).
+> Heavy payload: exposes runtime differences in object allocation, GC pressure, and CPU saturation.
 
-### Test Payload
+| Implementation | p50 (ms) | p90 (ms) | p99 (ms) | p99.9 (ms) | req/s | BFS time* | Notes |
+| :--- | :---: | :---: | :---: | :---: | :---: | :---: | :--- |
+| ☕ **Java 25 (Quarkus)** | **5.36** | **17.28** | 165.38 | 372.22 | **498.71** | **0.052 ms** | Stable at full rate |
+| 🦺 **Kotlin (Quarkus)** | 4.66 | 13.53 | 358.91 | 594.94 | 498.75 | 0.174 ms | p99 spike under load |
+| 🐹 **Go (Fiber)** | 5.45 | 7.40 | **220.80** | **417.02** | 500.16 | **0.023 ms** | Fastest BFS algorithm |
+| ☕ **Java 25 (Spring 4)** | 822 | 7,830 | 8,930 | 9,810 | 456.05 | 0.581 ms | ⚠ Severe degradation |
+| 🟢 **Node.js (Event Loop)** | 26,150 | 42,530 | 47,710 | 50,040 | 239.98 | 35.282 ms | ⚠ 27 timeouts |
+| 🟢 **Node.js (Worker Threads)** | 34,930 | — | — | — | 154.61 | 41.230 ms | ⚠ Queue saturation |
+| 🐍 **Python (FastAPI)** | 31,340 | — | — | — | 185.49 | 0.197 ms | ⚠ Queue saturation |
 
-```bash
-python3 -c "
-import json
-def build_tree(s, e):
-    if s > e: return None
-    mid = (s + e) // 2
-    return {'value': mid, 'left': build_tree(s, mid - 1), 'right': build_tree(mid + 1, e)}
-print(json.dumps(build_tree(1, 500)))
-" > heavy_tree.json
-```
+*\* BFS time = `X-Runtime-Ms` header from a single warm request*
 
-### 1. Latency Breakdown (The "Request Journey")
+![Large Tree Benchmark](images/benchmark_large_tree__500_nodes.png)
 
-A single request confirms that the algorithm itself is not the bottleneck:
+---
 
-```http
-x-runtime-nanoseconds: 37015        →  37 µs   (BFS algorithm)
-x-envoy-upstream-service-time: 4    →  4 ms    (Envoy proxy overhead)
-Total round-trip (Uruguay → us-east-1): ~148 ms (network)
-```
+## 🧠 Key Findings & Technical Insights
 
-```mermaid
-gantt
-    title Request Latency Attribution (Single Request)
-    dateFormat  SSS
-    axisFormat  %Lms
-    section Network
-    Client to AWS (Uruguay → USA) :000, 072
-    AWS to Client (USA → Uruguay) :078, 148
-    section Infrastructure
-    Envoy Proxy / TLS              :072, 076
-    section Logic
-    BFS Algorithm (JVM)            :076, 077
-```
+### 1. Java 25 (Quarkus) + Virtual Threads: Consistent King
 
-### 2. Benchmark Results
+The standout result across **both scenarios**: near-identical throughput at 500 req/s with stable median latency (3.23 ms → 5.79 ms, small to large). Virtual Threads absorb CPU-bound workload without the overhead of traditional thread pools, and Netty's non-blocking I/O keeps queue depth near zero. The 0.052 ms BFS time on 500 nodes demonstrates aggressive C2 JIT optimization of the hot path.
 
-All tests: `ab -n 10000 -k -p heavy_tree.json -T application/json <endpoint>`
+### 2. Go (Fiber): Fastest Algorithm, Best Tail on Large Tree
 
-#### From the client machine (Uruguay → us-east-1)
+Go's BFS time of **0.023 ms** (500 nodes) is the fastest measured — nearly half of Quarkus. Under load, Go maintains p99 of 220 ms vs. Quarkus's 165 ms on the large tree. Goroutines and zero-allocation idioms in fasthttp create very little GC pressure, keeping tail latency predictable.
 
-| Metric | c=250 (cold) | c=250 (warm) |
-| :--- | :--- | :--- |
-| **Req/s** | 179.28 | 179.74 |
-| **Failed** | 0 | 0 |
-| **p50** | 707 ms | 748 ms |
-| **p90** | 3,153 ms | 3,000 ms |
-| **p95** | 6,765 ms | 5,625 ms |
-| **p99** | 9,259 ms | 8,615 ms |
+### 3. The Node.js and Python "Collapse"
 
-The high tail latencies are caused by App Runner cold starts when scaling from 1 to 2–3 instances. The algorithm itself is not the bottleneck — Envoy buffers requests and passes only ~6 concurrent to the instance at peak, keeping CPU under 10%.
+Both Node.js variants achieve respectable latency on the **small tree** (p50 ≈ 4–5 ms) — proving the V8 runtime is fast for trivial workloads. The catastrophic failure at **500 nodes** (p50 > 26 seconds) reveals the fundamental limitation of CPU-bound work in event-loop architectures:
 
-#### From EC2 (same region, us-east-1) — eliminating network latency
+- The BFS itself takes **28–40 ms** of pure JS execution per request (vs. 0.02–0.17 ms on compiled runtimes).
+- At 500 req/s, new requests arrive every 2 ms, but each takes 30+ ms to process.
+- The queue grows unboundedly → all latency percentiles collapse.
 
-| Metric | c=250 | c=80 warm (1 instance) |
-| :--- | :--- | :--- |
-| **Req/s** | 272.49 | **297.66** |
-| **Failed** | 879 (cold starts) | **0** |
-| **p50** | 456 ms | **196 ms** |
-| **p90** | 1,289 ms | **437 ms** |
-| **p95** | 2,088 ms | **524 ms** |
-| **p99** | 7,134 ms | **912 ms** |
+Worker Threads **do not solve the problem**: the `structuredClone` serialization required for IPC adds overhead, making Worker Threads *slower* than the Event Loop in this scenario.
 
-With `c=80` (below the 100-concurrency threshold), a single warm instance handles the full load with 0 errors. This is the true capacity of one instance: **~300 req/s, p99 < 1s**, from within AWS.
+### 4. Spring Boot 4: The Unexpected Casualty
 
-### 3. Key Findings
+Spring Boot 4 performs similarly to Quarkus on the small tree (p50 3.99 ms) but collapses on the large tree (**p50 822 ms**). Both use Virtual Threads and Netty — the delta likely stems from Spring's deeper instrumentation stack (Micrometer, AOP, additional middleware layers) adding per-request overhead that compounds under CPU pressure.
 
-| Finding | Detail |
+### 5. Python (FastAPI): The Paradox
+
+Python's BFS implementation — powered by Pydantic v2 (Rust core) + orjson + a C-based regex depth scanner — achieves **0.197 ms** for 500 nodes in isolation, faster than Spring and Node.js. Yet under sustained 500 req/s load, Python shows 31-second p50 latency. This is a classic **queuing theory** result: a single uvicorn worker can process fast in isolation but cannot accept parallelism, so requests queue. The solution (multiple workers) would require a different deployment configuration than what App Runner's single-container model uses here.
+
+### 6. Kotlin + Coroutines: Curious p99 Spike
+
+Kotlin matches Java Quarkus closely on the small tree (p99 112.83 ms). On the large tree, however, Kotlin's p99 spikes to 358 ms while Java's p99 is 165 ms. Hypothesis: Kotlin coroutines introduce context-switch overhead that becomes visible when the coroutine is suspended waiting for work, and the large tree's longer CPU burst amplifies scheduling jitter.
+
+---
+
+## ⏱ The JIT Warm-up Lesson
+
+> An accidental experiment that became one of the most instructive findings of this study.
+
+During the first full benchmark run, the App Runner services had just been created — JVM instances were completely cold. The second run used the same 500 req/s methodology but with services that had been running for several hours. The p99 difference is dramatic:
+
+| Implementation | p99 cold instance | p99 warm instance | Delta |
+| :--- | :---: | :---: | :---: |
+| ☕ **Java 25 (Quarkus)** | 171 ms | ~65 ms | **2.6×** |
+| ☕ **Java 25 (Spring 4)** | 889 ms | ~39 ms | **22×** |
+| 🦺 **Kotlin (Quarkus)** | 20 ms | ~21 ms | ≈ 1× |
+| 🐹 **Go (Fiber)** | 26 ms | ~43 ms | ≈ 1× |
+
+**What this tells us:**
+
+- **Go and Kotlin are unaffected** — Go's AOT compilation and Kotlin's coroutine scheduler produce consistent latency regardless of runtime age. No JIT profile needed.
+- **Spring Boot is the most JIT-sensitive** — a 22× p99 improvement once C2 compiles the Spring instrumentation stack (Micrometer, AOP proxies, reactive pipeline) is a strong argument for mandatory warm-up in production Spring deployments.
+- **Quarkus recovers faster than Spring** — its leaner runtime means C2 reaches steady state in fewer compilation cycles, showing a more modest 2.6× improvement.
+
+This is why the final benchmark uses a **progressive warmup protocol**: 60s of brute-force curl (primes class loading and initial heap) followed by three wrk2 ramp phases at 200 → 350 → 500 req/s, giving the JIT profiling data at multiple throughput levels before measurement begins.
+
+---
+
+## 🔬 BFS Processing Time Summary (X-Runtime-Ms)
+
+> Pure algorithm time — excludes HTTP, JSON parsing, and serialization.
+
+| Implementation | Small Tree (7 nodes) | Large Tree (500 nodes) |
+| :--- | :---: | :---: |
+| 🐹 **Go (Fiber)** | 0.007 ms | **0.023 ms** |
+| ☕ **Java 25 (Quarkus)** | **0.005 ms** | 0.052 ms |
+| 🐍 **Python (FastAPI)** | 0.010 ms | 0.197 ms |
+| 🦺 **Kotlin (Quarkus)** | 0.052 ms | 0.174 ms |
+| ☕ **Java 25 (Spring 4)** | 0.062 ms | 0.581 ms |
+| 🟢 **Node.js (Worker Threads)** | 1.225 ms | 41.230 ms |
+| 🟢 **Node.js (Event Loop)** | 3.562 ms | 35.282 ms |
+
+![BFS Processing Time](images/probe_runtime_ms.png)
+
+The BFS time delta between Go/Java and Node.js (500 nodes: 0.02 ms vs. 28–40 ms, ~1,200–1,700×) directly explains the throughput collapse under load.
+
+---
+
+## 📈 AWS App Runner — Infrastructure Metrics
+
+> CloudWatch metrics captured directly from App Runner during the benchmark run, confirming the fairness of the infrastructure setup.
+
+### Request Throughput & Response Codes
+
+| Metric | Chart |
 | :--- | :--- |
-| **Algorithm cost** | 37 µs — negligible at any scale |
-| **Real bottleneck** | Network (148 ms from Uruguay) and App Runner cold starts |
-| **Envoy behavior** | Buffers requests before the instance; scaler sees ~6 concurrent even under 250 connections |
-| **1 instance capacity** | ~300 req/s, p99 < 1s (from within AWS, warm JVM) |
-| **Scaling trigger** | Cold starts add 5–15s of tail latency while new instances provision |
+| **Request Count** (req/min per service) | ![Request Count](images/request-count-overview.png) |
+| **HTTP 2xx Responses** — all successful | ![2xx](images/2xx-response-count.png) |
+| **HTTP 4xx Responses** — validation rejections (expected) | ![4xx](images/4xx-response-count.png) |
+| **HTTP 5xx Responses** — server errors (expect zero) | ![5xx](images/5xx-response-count-zero.png) |
 
-### 4. CloudWatch Dashboard
+> The 4xx spikes correspond to the malformed-JSON and empty-body test cases. 5xx count is zero across all services for the entire run — no crashes or panics.
 
-All metrics captured from the live AWS App Runner service during today's benchmark session.
+### Resource Utilization & Concurrency
 
-#### Traffic Volume
+| Metric | Chart |
+| :--- | :--- |
+| **CPU Utilization** (%) | ![CPU](images/cpu-utilization.png) |
+| **Memory Utilization** (%) | ![Memory](images/memory-utilization.png) |
+| **Active Instances** | ![Instances](images/active-instances.png) |
+| **Concurrency at Instance** (concurrent requests) | ![Concurrency](images/concurrency.png) |
+| **Request Latency p99** (ms, App Runner view) | ![Latency](images/request-latency.png) |
 
-| Request Count (all tests) |
-|:---:|
-| ![Request count across all benchmark runs](images/request-count-overview.png) |
-| *Each spike corresponds to a benchmark run. Peak: ~12.3K requests/min during the EC2 test at 21:33.* |
-
-#### Response Codes
-
-| 2xx Success | 4xx Errors | 5xx Errors |
-|:---:|:---:|:---:|
-| ![HTTP 2xx response count](images/2xx-response-count.png) | ![HTTP 4xx response count](images/4xx-response-count.png) | ![HTTP 5xx response count — no data](images/5xx-response-count-zero.png) |
-| *Max 8.471K/min — successful responses across all runs.* | *2.871K errors concentrated in the `concurrency=5` App Runner config test (c=250). All other tests: 0 errors.* | *Zero 5xx errors throughout the entire session — no instance failures or crashes.* |
-
-#### Instance Scaling & Concurrency
-
-| Active Instances | Concurrency at Instance |
-|:---:|:---:|
-| ![Active instances — peaked at 2 during EC2 test](images/active-instances.png) | ![Concurrency — peaked at 69.5 during EC2 test](images/concurrency.png) |
-| *Peaked at 2 instances during the EC2 test. Mac tests kept a single instance active — Envoy absorbed the burst before it could trigger scale-out.* | *Peak of 69.5 concurrent requests reaching the instance during the EC2 test. From Mac, the same c=250 test showed only ~6 — confirming Envoy's buffering effect.* |
-
-#### Resource Utilization & Latency
-
-| CPU Utilization | Memory Utilization | Request Latency |
-|:---:|:---:|:---:|
-| ![CPU utilization — peaked at 70.72% during EC2 test](images/cpu-utilization.png) | ![Memory utilization — flat at 5.37% across all tests](images/memory-utilization.png) | ![Request latency — peaked at 724.5ms during EC2 test](images/request-latency.png) |
-| *Peak 70.72% during the EC2 test (c=80, warm). Mac tests barely registered — the instance was never truly stressed from outside AWS.* | *Flat at ~5.37% regardless of load. Validates the low memory overhead of Java 25 Records and Virtual Threads.* | *Peak 724.5ms during the EC2 test. The spike reflects the cold start of the second instance provisioned mid-test.* |
+Key observations:
+- **CPU** hits 100% on all services during the large-tree scenario — confirming the workload is genuinely CPU-bound, not I/O-bound.
+- **Memory** stays below 13% across all services, confirming the 2 GB allocation is more than sufficient and no OOM risk.
+- **Active Instances** remains at 1 throughout — App Runner did not auto-scale, ensuring a level playing field with exactly 1 vCPU per service.
+- **Concurrency** peaks around 50 (matching `wrk2 -c50`) — no request queuing at the infrastructure level for compiled runtimes.
 
 ---
 
-### 5. Infrastructure Tuning: Concurrency Threshold
+## 🛡 Security & Guardrails
 
-The App Runner `concurrency` setting controls how many concurrent requests Envoy forwards to each instance before triggering a scale-out. Lowering it causes Envoy to push more requests directly to the instance:
+All 7 implementations enforce identical multi-layer security constraints to prevent DoS via malicious payloads:
 
-| Concurrency setting | Observed max concurrency at instance | CPU at peak | Errors (c=250 test) |
-| :---: | :---: | :---: | :---: |
-| 100 (default) | 6 | < 10% | 0 |
-| 5 | 12 | 51.69% | 2,962 (29.6%) |
-
-**Conclusion:** The default threshold of 100 is optimal for this workload. Lowering it causes the instance to receive unqueued bursts it cannot absorb, resulting in rejections. The correct lever for eliminating cold starts is `min instances`, not the concurrency threshold.
-
----
-
-## 🛠️ How to Reproduce
-
-### Prerequisites
-
-```bash
-# macOS
-brew install ab
-
-# Linux
-sudo apt-get install apache2-utils
-```
-
-### Run from local machine
-
-```bash
-# Generate payload
-python3 -c "
-import json
-def build_tree(s, e):
-    if s > e: return None
-    mid = (s + e) // 2
-    return {'value': mid, 'left': build_tree(s, mid - 1), 'right': build_tree(mid + 1, e)}
-print(json.dumps(build_tree(1, 500)))
-" > heavy_tree.json
-
-# Stress test
-ab -n 10000 -c 250 -k -p heavy_tree.json -T application/json \
-  https://zmptujuvph.us-east-1.awsapprunner.com/api/v1/trees/level-order
-
-# Inspect algorithm latency
-curl -i -X POST -H "Content-Type: application/json" -d @heavy_tree.json \
-  https://zmptujuvph.us-east-1.awsapprunner.com/api/v1/trees/level-order | grep x-runtime
-```
-
-### Run from EC2 (same region — measures true service capacity)
-
-```bash
-# Launch t3.medium in us-east-1, then:
-scp heavy_tree.json ec2-user@<ip>:~
-ssh ec2-user@<ip>
-
-sudo dnf install -y httpd-tools
-
-# Warmup
-ab -n 500 -c 50 -k -p heavy_tree.json -T application/json \
-  https://zmptujuvph.us-east-1.awsapprunner.com/api/v1/trees/level-order
-
-# Single instance test (stays under 100-concurrency threshold)
-ab -n 10000 -c 80 -k -p heavy_tree.json -T application/json \
-  https://zmptujuvph.us-east-1.awsapprunner.com/api/v1/trees/level-order
-```
+| Layer | Guard | Limit |
+| :--- | :--- | :--- |
+| **1a** | Content-Length / body size | 10 MB |
+| **1b** | JSON nesting depth (pre-parse) | 1,000 levels |
+| **2** | Structural validation (Pydantic / Jackson / Zod) | Schema conformance |
+| **3** | BFS depth guard | 500 levels |
+| **3** | BFS node-count guard | 10,000 nodes |
 
 ---
 
-## 🏁 Conclusion & Future Roadmap
+## 🚀 How to Reproduce
 
-A Java 25 / Project Loom stack delivers **~300 req/s per instance with p99 < 1s** for this workload, with the algorithm consuming only 37 µs per request. The remaining latency is entirely infrastructure (network, TLS, Envoy, cold starts).
+```bash
+# 1. Deploy all 7 services to ECR + App Runner
+bash scripts/deploy.sh all
 
-### Recommendations:
-* **`min instances = 2`:** Eliminates cold start tail latency under sustained load at zero code changes.
-* **GraalVM Native Image:** Reduces cold start time from ~10s to milliseconds for faster scale-out.
-* **Distributed Tracing:** OpenTelemetry integration to observe per-request BFS traversal times across instances.
+# 2. Set service hosts
+source scripts/aws.env
+
+# 3. Smoke-test all services
+bash scripts/test-aws.sh
+
+# 4. Run full benchmark (requires EC2 c5.xlarge + wrk2)
+python3 scripts/benchmark.py
+
+# 5. Probe single-request timing headers
+python3 scripts/probe.py
+```
+
+Requirements: `wrk2`, `pandas`, `matplotlib` — see `scripts/setup-ec2.sh` for EC2 setup.
+
+---
+
+## Infrastructure
+
+| Component | Spec |
+| :--- | :--- |
+| **Services** | AWS App Runner — 1 vCPU / 2 GB RAM (us-east-1) |
+| **Benchmark client** | EC2 `c5.xlarge` — 4 vCPU / 8 GB RAM (same region) |
+| **Container registry** | Amazon ECR (7 repositories) |
+| **Load tool** | `wrk2` — HDR histogram, constant-rate open-loop |
+
+---
+
+**Author:** Waldemar | Senior Software Engineer
+*Focusing on high-performance distributed systems and cloud-native architectures.*
